--- a/exercici2llenguatge/audio.html
+++ b/exercici2llenguatge/audio.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <audio src=""></audio>
+    
+    <audio src="audioizan.ogg" controls ></audio>
+    <audio src="ensaladadefruta.ogg" controls ></audio>
+
 </body>
 </html>
