--- a/exercici2llenguatge/video.html
+++ b/exercici2llenguatge/video.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Videos</title>
 </head>
 <body>
-    <video src=""></video>
+    <h1>VIDEOS ADJUNTADOS:</h1><!--Titulo explicando los videos adjuntado-->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Qmk0l10pM7Y?si=LbazZHOYk6xnV4ye" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Sw0iJbCcPhI?si=sxbiUNSGXQ8XwB_p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
