--- a/exercici2llenguatge/inici.html
+++ b/exercici2llenguatge/inici.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1><a style="color: red;">TASCA 2</a></h1><!--Titulo del trabajo-->
-    <h2><a href="">Primera web | Sergi Martinez</a></h2>
+    <h2><a >Primera web | Sergi Martinez</a></h2>
     <p><!--Texto de audio-->
 
 
