--- a/exercici2llenguatge/taules.html
+++ b/exercici2llenguatge/taules.html
@@ -6,8 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
-
+    <table border="1" >
+        <tr style>
+            <td><b>Ciutat</b></td>
+            <td><b>Pais</b></td>
+            <td><b>Continente</b></td>
+        </tr>
+        <tr>
+            <td>Roma</td>
+            <td>Italia</td>
+            <td>Europa</td>
+        </tr>
+        <tr>
+            <td>Tokio</td>
+            <td>Japon</td>
+            <td>Asia</td>
+        </tr>
 
 
         
