--- a/exercici2llenguatge/inici.html
+++ b/exercici2llenguatge/inici.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasca 2</title>
+    <style type="style.css"></style>
 </head>
 <body>
     <h1><a style="color: red;">TASCA 2</a></h1><!--Titulo del trabajo-->
