--- a/exercici2llenguatge/inici.html
+++ b/exercici2llenguatge/inici.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasca 2</title>
-    <style type="style.css"></style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1><a style="color: red;">TASCA 2</a></h1><!--Titulo del trabajo-->
-    <h2><a >Primera web | Sergi Martinez</a></h2>
-    <p><!--Texto de audio-->
+    <header>
+        <h1><a style="color: red;">TASCA 2</a></h1><!--Titulo del trabajo-->
+        <h2><a >Primera web | Sergi Martinez</a></h2>
+        <p><!--Texto de audio-->
 
 
-    </p>
-    <p><!--Texto tecnologia d'enregistrament-->
+        </p>
+        <p><!--Texto tecnologia d'enregistrament-->
 
 
-    </p>
-    <nav>
-        <ul><!--Lista con enlaces de las paginas-->
-            <li><a href="audio.html">Pàgina d'audios</a></li>
-            <li><a href="video.html">Pàgina de vídeos</a></li>
-            <li><a href="taules.html">Pagina de taules</a></li>
-        </ul>
-    </nav><!--Adjunto foto de indio informatico-->
+        </p>
+        <nav>
+            <ul><!--Lista con enlaces de las paginas-->
+                <li><a href="audio.html">Pàgina d'audios</a></li>
+                <li><a href="video.html">Pàgina de vídeos</a></li>
+                <li><a href="taules.html">Pagina de taules</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--Adjunto foto de indio informatico-->
     <img src="https://cdn-3.expansion.mx/dims4/default/2823cfb/2147483647/strip/true/crop/2120x1414+0+0/resize/1200x800!/format/webp/quality/60/?url=https%3A%2F%2Fcherry-brightspot.s3.amazonaws.com%2Fc1%2F44%2Fc8cdb3574627b06a364ed4a3805e%2Fistock-476380420.jpg" alt="">
-
+    <footer>
+        <p>Autor de la pàgina:Sergi Martinez Martinez</p>
+        <h4>Correo: Sergi Martinez Martinez</h4>
+        <p>1 DAW 2023-2024</p>
+        
+    </footer>
 </body>
 </html>
