--- a/exercici2llenguatge/audio.html
+++ b/exercici2llenguatge/audio.html
@@ -6,9 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <audio src="audioizan.ogg" controls ></audio>
-    <audio src="ensaladadefruta.ogg" controls ></audio>
+    <header>
+        <b>Audios adjuntados</b>
 
+
+    </header>
+    <main>
+        <nav></nav>
+            <audio src="audioizan.ogg" controls ></audio>
+            <audio src="ensaladadefruta.ogg" controls ></audio>
+        </nav>
+    </main>
+    <footer>
+        <p>Pagina creada por sergio martinez</p>
+        <h4>DAW 2023-2024</h4>
+
+
+    </footer>
 </body>
 </html>
