--- a/exercici2llenguatge/inici.html
+++ b/exercici2llenguatge/inici.html
@@ -10,14 +10,6 @@
     <header>
         <h1><a style="color: red;">TASCA 2</a></h1><!--Titulo del trabajo-->
         <h2><a >Primera web | Sergi Martinez</a></h2>
-        <p><!--Texto de audio-->
-
-
-        </p>
-        <p><!--Texto tecnologia d'enregistrament-->
-
-
-        </p>
         <nav>
             <ul><!--Lista con enlaces de las paginas-->
                 <li><a href="audio.html">Pàgina d'audios</a></li>
@@ -26,11 +18,22 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <p><!--Texto de audio-->
+            El concepte d'àudio s'empra per anomenar la tècnica que permet gravar, transmetre i reproduir sons
+        </p>
+        <p><!--Texto tecnologia d'enregistrament-->
+            És la tecnologia d'enregistrament, processament, emmagatzematge, transmissió d'imatges i reconstrucció per mitjans electrònics digitals o analògics d'una seqüència d'imatges que representen escenes en moviment
+        </p>
+        <nav>
+        <a href="https://www.cifpfbmoll.eu">PAGINA DE L'ESCOLA</a>
+
+    </main>
     <!--Adjunto foto de indio informatico-->
     <img src="https://cdn-3.expansion.mx/dims4/default/2823cfb/2147483647/strip/true/crop/2120x1414+0+0/resize/1200x800!/format/webp/quality/60/?url=https%3A%2F%2Fcherry-brightspot.s3.amazonaws.com%2Fc1%2F44%2Fc8cdb3574627b06a364ed4a3805e%2Fistock-476380420.jpg" alt="">
     <footer>
-        <p>Autor de la pàgina:Sergi Martinez Martinez</p>
-        <h4>Correo: Sergi Martinez Martinez</h4>
+        <p>Autor de la pàgina: Sergi Martinez Martinez</p>
+        <h4>Correo: sergimartinez16@gmail.com</h4>
         <p>1 DAW 2023-2024</p>
         
     </footer>
