--- a/exercici2llenguatge/audio.html
+++ b/exercici2llenguatge/audio.html
@@ -11,12 +11,12 @@
 
 
     </header>
-    <main>
+    <body>
         <nav></nav>
             <audio src="audioizan.ogg" controls ></audio>
             <audio src="ensaladadefruta.ogg" controls ></audio>
         </nav>
-    </main>
+    </body>
     <footer>
         <p>Pagina creada por sergio martinez</p>
         <h4>DAW 2023-2024</h4>
