--- a/exercici2llenguatge/taules.html
+++ b/exercici2llenguatge/taules.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-
+        <h1>Tabla de ciutats</h1>
 
 
     </header>
@@ -28,9 +28,6 @@
                 <td>Japon</td>
                 <td>Asia</td>
             </tr>
-
-
-            
         </table>
     </body>
     <footer>
