--- a/exercici2llenguatge/inici.html
+++ b/exercici2llenguatge/inici.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <body>
         <p><!--Texto de audio-->
             El concepte d'àudio s'empra per anomenar la tècnica que permet gravar, transmetre i reproduir sons
         </p>
@@ -26,11 +26,20 @@
             És la tecnologia d'enregistrament, processament, emmagatzematge, transmissió d'imatges i reconstrucció per mitjans electrònics digitals o analògics d'una seqüència d'imatges que representen escenes en moviment
         </p>
         <nav>
-        <a href="https://www.cifpfbmoll.eu">PAGINA DE L'ESCOLA</a>
-
-    </main>
-    <!--Adjunto foto de indio informatico-->
-    <img src="https://cdn-3.expansion.mx/dims4/default/2823cfb/2147483647/strip/true/crop/2120x1414+0+0/resize/1200x800!/format/webp/quality/60/?url=https%3A%2F%2Fcherry-brightspot.s3.amazonaws.com%2Fc1%2F44%2Fc8cdb3574627b06a364ed4a3805e%2Fistock-476380420.jpg" alt="">
+        <a href="https://www.cifpfbmoll.eu" id="escuela">PAGINA DE L'ESCOLA</a>
+        <h1 class="classe1"> Provant els estils de classe </h1>
+        <p class="classe2"> Aquest és un paràgraf dins d'una classe </p>
+        <div id="par">
+            <p>Això és un text de prova.</p>
+         </div>
+        <span><p>Enllaç a l'ajuntament de Palma: <a href="adreça web ajuntament de Palma">Ajuntament de Palma</a>, i un enllaç a la Moncloa: <a href="adreça de La Moncloa">La Moncloa</a>.</p> <p>Un tercer enllaç a les nacions unides, <a href="adreça de les nacions unides">ONU</a>.</p>
+        </span>
+        <p> Ja Hem acabat d'enllaçar </p>
+        <!--Adjunto foto de indio informatico-->    
+        <img src="https://cdn-3.expansion.mx/dims4/default/2823cfb/2147483647/strip/true/crop/2120x1414+0+0/resize/1200x800!/format/webp/quality/60/?url=https%3A%2F%2Fcherry-brightspot.s3.amazonaws.com%2Fc1%2F44%2Fc8cdb3574627b06a364ed4a3805e%2Fistock-476380420.jpg" alt="">
+        </body>
+    
+    
     <footer>
         <p>Autor de la pàgina: Sergi Martinez Martinez</p>
         <h4>Correo: sergimartinez16@gmail.com</h4>
