--- a/exercici2llenguatge/taules.html
+++ b/exercici2llenguatge/taules.html
@@ -12,7 +12,7 @@
 
     </header>
     <body>
-        <table border="1" >
+        <table border="1" style="width: 100%; height: 200%; border-collapse: collapse;">
             <tr style>
                 <td><b>Ciutat</b></td>
                 <td><b>Pais</b></td>
