--- a/exercici2llenguatge/video.html
+++ b/exercici2llenguatge/video.html
@@ -6,8 +6,15 @@
     <title>Videos</title>
 </head>
 <body>
-    <h1>VIDEOS ADJUNTADOS:</h1><!--Titulo explicando los videos adjuntado-->
+    <header><h1>VIDEOS ADJUNTADOS:</h1><!--Titulo explicando los videos adjuntado--></header>
+    <body>
+        
+    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Qmk0l10pM7Y?si=LbazZHOYk6xnV4ye" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Sw0iJbCcPhI?si=sxbiUNSGXQ8XwB_p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </body>
+    <footer>
+        <b>Pagina hecha por Sergi Martinez</b>
+    </footer>
 </body>
 </html>
