--- a/tasca6llenguatge/inicio.html
+++ b/tasca6llenguatge/inicio.html
@@ -9,8 +9,12 @@
 <body>
     <header>
         <h1>Trabajo 6 </h1>
-
-
+        <div>
+            <a href="https://twitter.com/home">Home</a>
+            <a href="https://chat.openai.com/">Index</a>
+            <a href="https://www.youtube.com/watch?v=v7kKlbJeCls&ab_channel=Deividcat">Video</a>
+            <a href="https://aulavirtual.caib.es/c07015884/mod/assign/view.php?id=11863">Clase</a>
+        </div>
 
     </header>
     <main>
