--- a/tasca6llenguatge/inicio.html
+++ b/tasca6llenguatge/inicio.html
@@ -18,6 +18,11 @@
 
     </header>
     <main>
+        <div>
+            <div id="contenedor">Div 1</div>
+            <div>Div 2</div>
+            <div>Div 3</div>
+        </div>
         <button class="boton-azul">GOD</button>
         <button id="boton-unico">GOD 2</button>
         <button class="boton-azul">GOD 3</button>
@@ -31,7 +36,15 @@
     </main>
     <footer>
        <a href="https://www.youtube.com/watch?v=WvyvwlowHWM&ab_channel=HÖRBERLIN" target="_blank"><b>Para mas informacion</b></a>
-
+        <ul class="menu">
+            <li>Numero 1</li>
+            <li>Numero 2</li>
+            <li>Numero 3</li>
+        </ul>
+        <h2>ENCABEZADO</h2>
+        <p>P fuera 1</p>
+        <p>P fuera 2</p>
+        <p>P fuera 3</p>
 
     </footer>
 
