--- a/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
@@ -22,6 +22,8 @@
     </header>
 
     <main>
+        <p>holaaaa
+        </p>
         <p class="parrafo"><!--Texto de audio-->
             El concepte d'àudio s'empra per anomenar la tècnica que permet gravar, transmetre i reproduir sons
         </p>
