--- a/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
@@ -44,7 +44,7 @@
             </span>
             <p> Ja Hem acabat d'enllaçar </p>
             <!--Adjunto foto de indio informatico-->
-            <img src="https://cdn-3.expansion.mx/dims4/default/2823cfb/2147483647/strip/true/crop/2120x1414+0+0/resize/1200x800!/format/webp/quality/60/?url=https%3A%2F%2Fcherry-brightspot.s3.amazonaws.com%2Fc1%2F44%2Fc8cdb3574627b06a364ed4a3805e%2Fistock-476380420.jpg" alt="">
+            <img src="38.png" alt="">
     </main>
 
 
