--- a/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
@@ -10,15 +10,15 @@
 
 <body>
     <header>
-        <h1><a id="titulo">TASCA 2</a></h1><!--Titulo del trabajo-->
-        <h2 id="Ser"><a>Primera web | Sergi Martinez</a></h2>
         <nav>
-            <ul><!--Lista con enlaces de las paginas-->
-                <li><a href="audio.html" class="navegacion">Pàgina d'audios</a></li>
-                <li><a href="video.html" class="navegacion">Pàgina de vídeos</a></li>
-                <li><a href="taules.html" class="navegacion">Pagina de taules</a></li>
-            </ul>
+            <!--Lista con enlaces de las paginas-->
+            <a href="audio.html" class="navegacion">Pàgina d'audios</a>
+            <a href="video.html" class="navegacion">Pàgina de vídeos</a>
+            <a href="taules.html" class="navegacion">Pagina de taules</a>
         </nav>
+        <h1><a id="titulo">PRACTICA 1</a></h1><!--Titulo del trabajo-->
+        <h2 class="parrafo"><a>Primera web | Sergi Martinez</a></h2>
+        
     </header>
 
     <main>
