--- a/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
@@ -15,6 +15,7 @@
             <a href="audio.html" class="navegacion">Pàgina d'audios</a>
             <a href="video.html" class="navegacion">Pàgina de vídeos</a>
             <a href="taules.html" class="navegacion">Pagina de taules</a>
+            <a href="sorpresa.html" class="navegacion">Treballs de programació</a>
         </nav>
         <h1><a id="titulo">PRACTICA 1</a></h1><!--Titulo del trabajo-->
         <h2 class="parrafo"><a>Primera web | Sergi Martinez</a></h2>
@@ -33,7 +34,6 @@
         <nav>
             <a href="https://www.cifpfbmoll.eu" id="escuela">PAGINA DE L'ESCOLA</a>
             <h1 class="classe1"> Provant els estils de classe </h1>
-            <button class="classe2" ><a href="sorpresa.html">DESCOBREIX</a></button>
             <div id="par">
                 <p>Això és un text de prova.</p>
             </div>
