--- a/PRACTICA1SergiMartinez/exercici2llenguatge/taules.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/taules.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="taules.css">
 </head>
 <body>
     <header>
-        <h1>Tabla de ciutats</h1>
+        <h1 class="titulo">TABLA DE CIUTATS</h1>
 
 
     </header>
     <body>
-        <table border="1" style="width: 100%; height: 200%; border-collapse: collapse;">
-            <tr style>
+        <table class="tabla" border="1">
+            <tr>
                 <td><b>Ciutat</b></td>
                 <td><b>Pais</b></td>
                 <td><b>Continente</b></td>
             </tr>
-            <tr>
+            <tr class="palabras">
                 <td>Roma</td>
                 <td>Italia</td>
                 <td>Europa</td>
             </tr>
-            <tr>
+            <tr class="palabras">
                 <td>Tokio</td>
                 <td>Japon</td>
                 <td>Asia</td>
