--- a/PRACTICA1SergiMartinez/exercici2llenguatge/sorpresa.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/sorpresa.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="sorpresa.css">
 </head>
 <body>
-    <h1>TEXTO</h1>
-    
+    <header>
+        <h1>TRABAJOS REALIZADOS EN PROGRAMACION</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>  
 </body>
 </html>
