--- a/PRACTICA1SergiMartinez/exercici2llenguatge/video.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/video.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videos</title>
+    <link rel="stylesheet" href="video.css">
 </head>
 <body>
     <header><h1>VIDEOS ADJUNTADOS:</h1><!--Titulo explicando los videos adjuntado--></header>
