--- a/PRACTICA1SergiMartinez/exercici2llenguatge/taules.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/taules.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <button class="boton" href="inici.html"></button></button>
         <h1 class="titulo">TABLA DE CIUTATS</h1>
 
 
