--- a/PRACTICA1SergiMartinez/exercici2llenguatge/audio.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/audio.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <b>Audios adjuntados</b>
+        <h1 class="titulo">Audios adjuntados</h1>
 
 
     </header>
     <body>
-        <nav></nav>
+        <nav class="multimedia">
             <audio src="audioizan.ogg" controls ></audio>
             <audio src="ensaladadefruta.ogg" controls ></audio>
         </nav>
