--- a/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/inici.html
@@ -17,7 +17,7 @@
             <a href="taules.html" class="navegacion">Pagina de taules</a>
             <a href="sorpresa.html" class="navegacion">Treballs de programació</a>
         </nav>
-        <h1><a id="titulo">PRACTICA 1</a></h1><!--Titulo del trabajo-->
+        <h1 class="titulo">PRACTICA 1</h1><!--Titulo del trabajo-->
         <h2 class="parrafo"><a>Primera web | Sergi Martinez</a></h2>
         
     </header>
@@ -31,7 +31,7 @@
             És la tecnologia d'enregistrament, processament, emmagatzematge, transmissió d'imatges i reconstrucció per
             mitjans electrònics digitals o analògics d'una seqüència d'imatges que representen escenes en moviment
         </p>
-        <nav>
+        <nav class="general">
             <a href="https://www.cifpfbmoll.eu" id="escuela">PAGINA DE L'ESCOLA</a>
             <h1 class="classe1"> Provant els estils de classe </h1>
             <div id="par">
@@ -44,7 +44,8 @@
             </span>
             <p> Ja Hem acabat d'enllaçar </p>
             <!--Adjunto foto de indio informatico-->
-            <img src="38.png" alt="">
+            <img id="imagen" src="38.png"  alt="">
+        </nav>
     </main>
 
 
