--- a/PRACTICA1SergiMartinez/exercici2llenguatge/video.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/video.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="video.css">
 </head>
 <body>
-    <header><h1>VIDEOS ADJUNTADOS:</h1><!--Titulo explicando los videos adjuntado--></header>
+    <header>
+        <h1 class="titulo">VIDEOS ADJUNTADOS:</h1><!--Titulo explicando los videos adjuntado-->
+    </header>
     <body>
         
-    
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Qmk0l10pM7Y?si=LbazZHOYk6xnV4ye" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Sw0iJbCcPhI?si=sxbiUNSGXQ8XwB_p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="multimedia">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Qmk0l10pM7Y?si=LbazZHOYk6xnV4ye" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Sw0iJbCcPhI?si=sxbiUNSGXQ8XwB_p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
     </body>
     <footer>
         <b>Pagina hecha por Sergi Martinez</b>
