--- a/PRACTICA1SergiMartinez/exercici2llenguatge/audio.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/audio.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <button id="boton"> <a href="inici.html">Inicio</a></button>
         <h1 class="titulo">Audios adjuntados</h1>
 
 
