--- a/PRACTICA1SergiMartinez/exercici2llenguatge/video.html
+++ b/PRACTICA1SergiMartinez/exercici2llenguatge/video.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <button id="boton"> <a href="inici.html">Inicio</a></button>
         <h1 class="titulo">VIDEOS ADJUNTADOS:</h1><!--Titulo explicando los videos adjuntado-->
     </header>
     <body>
