--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -10,13 +10,19 @@
     <header>
         <div class="caja1">
             <h1 class="titulos">Sergi Martinez</h1> 
+            <h3>Diseñador Grafico // Programador Peruano</h3>
+            <img src="feo.jpg" alt="" class="img">
         </div>
          
         
 
     </header>
     <main>
+        <div class="caja2">
 
+
+
+        </div>
     </main>
     <footer>
 
