--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -19,9 +19,9 @@
     </header>
     <main>
         <div class="caja2">
-
-
-
+            <button>Video</button>
+            <button>CV</button>
+            <button>Trabajos</button>
         </div>
     </main>
     <footer>
