--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -33,7 +33,7 @@
       </article>
       <div class="caja2">
           <a href="">Video</a>
-          <a href="">CV</a>
+          <a href="CV.html">CV</a>
           <a href="trabajos.html">Trabajos</a>
       </div>
            
