--- a/portafolio/trabajos.html
+++ b/portafolio/trabajos.html
@@ -10,5 +10,11 @@
     <header>
         <h1>TRABAJOS</h1>
     </header>
+    <main>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </main>
 </body>
 </html>
