--- a/portafolio/CV.html
+++ b/portafolio/CV.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CV.css">
 </head>
 <body>
-    
+    <header>
+        <article class="parent">
+            <h1 class="item">Sergi Martinez</h1>
+            <p class="item">Estudiante de Diseño Grafico y Estudiante de de Desarrollo Web</p>
+        </article>
+    </header>
+    <main>
+        
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
