--- a/ejerciciosLenguajeDeMarcasJavaScript3/index.html
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/index.html
@@ -16,12 +16,27 @@
     <main>
         <button onclick='ejercicio()'>Ejercicio 1</button>
         <button onclick='ejercicio2()'>Ejercicio 2</button>
-        <button onclick='ejercicio()'>Ejercicio 3</button>
-        <button onclick='ejercicio()'>Ejercicio 4</button>
+        <button onclick='ejercicio3()'>Ejercicio 3</button>
+        <button onclick='ejercicio4()'>Ejercicio 4</button>
     </main>
     <footer>
-        <button onclick='ejercicio()'>Ejercicio 5</button>
-        <button onclick='ejercicio()'>Ejercicio 6</button>
+        <button onclick='ejercicio5()'>Ejercicio 5</button>
+        <button onclick='ejercicio6()'>Ejercicio 6</button>
+
+        <form action="#" id="KLK">
+            <fieldset>
+                <label for="nombreM">Nombre de la marca: </label> 
+                <select id="opciones" name="opciones">
+                    <option value="Ford">Ford</option>
+                    <option value="Seat">Seat</option>
+                    <option value="Citroen">Citroen</option>
+                    <option value="Audi">Audi</option>
+                </select> <br><br>
+                <label for="precio">Precio del coche: </label> 
+                <input type="text" id="precio" size="15"> <br><br>
+                <button onclick="Ej3_4()">Enviar respuestas(Ej3_4)</button>
+            </fieldset>
+        </form>
     </footer>
     
     <script src="ejercicios.js"></script>
