--- a/ejerciciosLenguajeDeMarcasJavaScript3/index.html
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>TRABAJO JAVASCRIPT</h1>
         <a href="#" class="button blue medium radius" id="toggle-theme-btn">
             <span class="icon-house"></span>Tema oscuro
         </a>
@@ -18,10 +19,17 @@
         <button onclick='ejercicio2()'>Ejercicio 2</button>
         <button onclick='ejercicio3()'>Ejercicio 3</button>
         <button onclick='ejercicio4()'>Ejercicio 4</button>
-    </main>
-    <footer>
         <button onclick='ejercicio5()'>Ejercicio 5</button>
         <button onclick='ejercicio6()'>Ejercicio 6</button>
+        <button onclick='ejercicio7()'>Ejercicio 7</button>
+        <button onclick='ejercicio8()'>Ejercicio 8</button>
+        <button onclick='ejercicio9()'>Ejercicio 9</button>
+        <button onclick='adivinaNumero()'>ADIVINA EL NUMERO</button>
+
+    </main>
+    <footer>
+        
+
 
         <form action="#" id="KLK">
             <fieldset>
