--- a/ejerciciosLenguajeDeMarcasJavaScript3/index.html
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/index.html
@@ -25,12 +25,27 @@
         <button onclick='ejercicio8()'>Ejercicio 8</button>
         <button onclick='ejercicio9()'>Ejercicio 9</button>
         <button onclick='adivinaNumero()'>ADIVINA EL NUMERO</button>
-
+        <p id="primera" onclick="extensionParrafo()">
+            Internet es una de las herramientas más importantes que tiene la sociedad para
+            mantenerse en contacto con los demás en tiempos de pandemia. Sin embargo, para no
+            correr ningún riesgo, es importante que el usuario conozca bien el funcionamiento de su
+            router: ese dispositivo con forma de caja que te permite conectarte a la red gracias al WiFi.
+            Con el fin de que seamos capaces de conocer su funcionamiento, y de protegernos de
+            cualquier ataque o intento de robo, el Instituto Nacional de Ciberseguridad (INCIBE) ha
+            compartido una guía los pasos que los usuarios deben dar para convertir su conexión en
+            una fortaleza.
+        </p>
+        <!-- <p id="segunda"> 
+            "El router es el dispositivo que nos permite conectarnos y navegar por Internet.
+            Configurarlo de manera correcta evitará nuestra privacidad y seguridad», explican desde
+            INCIBE a este respecto. De acuerdo con la institución, lo primero que debemos hacer
+            cuando adquirimos un router nuevo es revisar su configuración para comprobar si es
+            suficientemente segura. Para ello debemos coger la dirección IP del dispositivo y ponerla
+            en el navegador que queramos, ya sea Chrome, Safari o cualquier otro.."
+        </p>
+        -->
     </main>
     <footer>
-        
-
-
         <form action="#" id="KLK">
             <fieldset>
                 <label for="nombreM">Nombre de la marca: </label> 
@@ -45,7 +60,18 @@
                 <button onclick="Ej3_4()">Enviar respuestas(Ej3_4)</button>
             </fieldset>
         </form>
+        <form action="" id="correoForm">
+            <fieldset>
+                <label for="Correo">Escribe tu Correo electronico</label>
+                <input type="email" name="" id="CorreoEmail">
+                <input type="password" name="" id="CorreoPassword">
+                <input type="button" value="Enviar">
+            </fieldset>
+        </form>
+        <!--Imagen gofa-->
+        <img src="" alt="">
     </footer>
+
     
     <script src="ejercicios.js"></script>
 </body>
