--- a/ejerciciosLenguajeDeMarcasJavaScript3/index.html
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/index.html
@@ -25,6 +25,7 @@
         <button onclick='ejercicio8()'>Ejercicio 8</button>
         <button onclick='ejercicio9()'>Ejercicio 9</button>
         <button onclick='adivinaNumero()'>ADIVINA EL NUMERO</button>
+        
         <p id="primera" onclick="extensionParrafo()">
             Internet es una de las herramientas más importantes que tiene la sociedad para
             mantenerse en contacto con los demás en tiempos de pandemia. Sin embargo, para no
@@ -35,7 +36,7 @@
             compartido una guía los pasos que los usuarios deben dar para convertir su conexión en
             una fortaleza.
         </p>
-        <!-- <p id="segunda"> 
+        <p id="segunda"> 
             "El router es el dispositivo que nos permite conectarnos y navegar por Internet.
             Configurarlo de manera correcta evitará nuestra privacidad y seguridad», explican desde
             INCIBE a este respecto. De acuerdo con la institución, lo primero que debemos hacer
@@ -43,7 +44,9 @@
             suficientemente segura. Para ello debemos coger la dirección IP del dispositivo y ponerla
             en el navegador que queramos, ya sea Chrome, Safari o cualquier otro.."
         </p>
-        -->
+        
+        <input type="number" id="numeroABorrar" placeholder="Escribe un número">
+        <button onclick='ex3()'>Borrar Numeros Iguales</button>
     </main>
     <footer>
         <form action="#" id="KLK">
@@ -62,7 +65,7 @@
         </form>
         <form action="" id="correoForm">
             <fieldset>
-                <label for="Correo">Escribe tu Correo electronico</label>
+                <label for="Correo" >Escribe tu Correo electronico</label>
                 <input type="email" name="" id="CorreoEmail">
                 <input type="password" name="" id="CorreoPassword">
                 <input type="button" value="Enviar">
