--- a/ejerciciosLenguajeDeMarcasJavaScript3/index.html
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Ejercicios 3</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
+        <span class="material-symbols-outlined">
+            search
+            </span>
+        
         <h1>TRABAJO JAVASCRIPT</h1>
         <a href="#" class="button blue medium radius" id="toggle-theme-btn">
             <span class="icon-house"></span>Tema oscuro
