--- a/ejerciciosLenguajeDeMarcasJavaScript3/index.html
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/index.html
@@ -34,7 +34,7 @@
         <button onclick='ejercicio8()'>Ejercicio 8</button>
         <button onclick='ejercicio9()'>Ejercicio 9</button>
         <button onclick='adivinaNumero()'>ADIVINA EL NUMERO</button>
-        
+        <button id="openPageButton">Abrir DADO</button>
         <p id="primera" onclick="extensionParrafo()">
             Internet es una de las herramientas más importantes que tiene la sociedad para
             mantenerse en contacto con los demás en tiempos de pandemia. Sin embargo, para no
