--- a/ejerciciosLenguajeDeMarcasJavaScript3/index.html
+++ b/ejerciciosLenguajeDeMarcasJavaScript3/index.html
@@ -26,45 +26,45 @@
         <p id="joanfeo">Dedicado a Joan Perez DEP:2001/2023</p>
     </header>
     <main>
-        <p>1- Escriu un programa que mostri els números del 10 a l’1 en la consola (console.log) i a la pàgina
+        <p class="enunciados">1- Escriu un programa que mostri els números del 10 a l’1 en la consola (console.log) i a la pàgina
             web (document.write).
         </p>
         <button onclick='ejercicio()'>Ejercicio 1</button>
-        <p>2- Escriu amb un programa que demani dos números i mostri el més gran en la consola
+        <p class="enunciados">2- Escriu amb un programa que demani dos números i mostri el més gran en la consola
             console.log i a la pàgina web (document.write).
         </p>
         <button onclick='ejercicio2()'>Ejercicio 2</button>
-        <p>3- Escriu un programa que demani dos números i mostri la suma dels dos en la consola
+        <p class="enunciados">3- Escriu un programa que demani dos números i mostri la suma dels dos en la consola
             (console.log) i a la pàgina web (document.write).
         </p>
         <button onclick='ejercicio3()'>Ejercicio 3</button>
-        <p>4- Escriu un programa que demani el teu nom, la teva edat, la teva estatura i el teu estat civil
+        <p class="enunciados">4- Escriu un programa que demani el teu nom, la teva edat, la teva estatura i el teu estat civil
             (casat o solter). Després ha de mostrar aquestes dades en una mateixa línia si l'estat civil és
             casat, i en columna si l'estat civil és solter. (resultat per consola i a la pàgina web
             (document.write)).
         </p>
         <button onclick='ejercicio4()'>Ejercicio 4</button>
-        <p>5- Escriu un programa que demani una paraula i retorni el nombre de caràcters que té la paraula.       
+        <p class="enunciados">5- Escriu un programa que demani una paraula i retorni el nombre de caràcters que té la paraula.       
         </p>
         <button onclick='ejercicio5()'>Ejercicio 5</button>
-        <p>6- Crea un programa que guardi dins d'un array els dotze mesos de l'any i després escrigui
+        <p class="enunciados">6- Crea un programa que guardi dins d'un array els dotze mesos de l'any i després escrigui
             aquests mesos en la consola (console.log) i a la pàgina web (document.write).
         </p>
         <button onclick='ejercicio6()'>Ejercicio 6</button>
-        <p>7- Escriu un programa que demani un nota (numèrica), i retorni un missatge de valoració de cada
+        <p class="enunciados">7- Escriu un programa que demani un nota (numèrica), i retorni un missatge de valoració de cada
             nota, per exemple: Si s'introdueix un 3, es pot mostrar el missatge en la consola: «la nota 3 és
             molt insuficient», si s'introdueix un 7, el missatge podria ser: «El 7 és un notable baix», etc.
         </p>
         <button onclick='ejercicio7()'>Ejercicio 7</button>
-        <p>8- Crea un programa per saber si un número (demanat prèviament), és imparell o parell. S’ha de
+        <p class="enunciados">8- Crea un programa per saber si un número (demanat prèviament), és imparell o parell. S’ha de
             poder demanar tants de números com l’usuari vulgui.
         </p>
         <button onclick='ejercicio8()'>Ejercicio 8</button>
-        <p>9- Crea un programa que donada una cadena de text, mostri en la consola el text de manera
+        <p class="enunciados">9- Crea un programa que donada una cadena de text, mostri en la consola el text de manera
             inversa.
         </p>
         <button onclick='ejercicio9()'>Ejercicio 9</button>
-        <p>Adivina el nombre, nomes tens 3 intents</p>
+        <p class="enunciados">Adivina el nombre, nomes tens 3 intents</p>
         <button onclick='adivinaNumero()'>ADIVINA EL NUMERO</button>
         <h3>PAGINA DE UN DADO INTERACTIVO!!!!!</h3>
         <button id="openPageButton">Abrir DADO</button>
